<resources>
    <string name="app_name">TCC</string>

    <string name="text_login">LOGIN</string>
    <string name="text_email">E-mail</string>
    <string name="text_passaword">Senha</string>
    <string name="text_passaword_confirmation">Confirme sua senha</string>
    <string name="text_name">Seu nome</string>
    <string name="text_welcome">Seja bem-vindo</string>
    <string name="text_welcome_back">Bem-vindo de Volta</string>
    <string name="text_phone">Telefone</string>
    <string name="text_Text">Android Dashboard Screen Layout Design | UI Design |
                             Android StudioIn this tutorial, we will design a dashboard
                             screen using Constraint Layout.</string>
    <string name="text_Serch">Está com fome de que?</string>


    <string name="text_status">Status : </string>
    <string name="text_situation">Aprovado</string>


    //Nome das telas
    <string name="text_shopping">Carrinho</string>
    <string name="text_home">Home</string>
    <string name="text_perfil">Perfil</string>
    <string name="text_menu">Cardapio</string>
    <string name="text_discount">Descontos</string>


    <string name="btn_login">ENTRAR</string>
    <string name="btn_register">CADASTRAR</string>
    <string name="btn_existing_account">Entrar na conta</string>
    <string name="btn_new_account">Crie uma conta</string>
    <string name="btn_passaword_reset">Esqueci minha senha</string>
    <string name="btn_close">Cancelar</string>
    <string name="btn_save">Salvar</string>


    <string name="btn_lanche">Lanche</string>
    <string name="btn_salgados">Salgados</string>
    <string name="btn_bebidas">Bebidas</string>
    <string name="btn_doce">Doce</string>
    <string name="btn_detalhe"> Ver detalhes</string>
    <string name="title_activity_teste">teste</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>

</resources>

