<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/app_name"
        android:scaleType="centerCrop"
        android:src="@drawable/background_image" />

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_gradiente"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_welcomeback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:text="@string/text_welcome_back"
        android:textColor="@color/colorAccent2"
        android:textSize="38sp"
        app:layout_constraintBottom_toTopOf="@+id/button_userlogin"/>

    <EditText
        android:id="@+id/button_userlogin"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/button_tranparent"
        android:hint="@string/text_name"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textColor="@color/colorAccent2"
        android:textColorHint="#ECECEC"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/button_passawordlogin" />

    <EditText
        android:id="@+id/button_passawordlogin"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/button_tranparent"
        android:hint="@string/text_passaword"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textColor="@color/colorAccent2"
        android:textColorHint="#ECECEC"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/button_login" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/button_gradiente"
        android:text="@string/btn_login"
        android:textAllCaps="false"
        android:textColor="@color/colorAccent2"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_passaword_reset" />
    <TextView
        android:id="@+id/btn_passaword_reset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/btn_passaword_reset"
        android:textColor="@color/colorAccent2"
        android:textSize="17sp"
        app:layout_constraintBottom_toTopOf="@+id/text_new_aocount"/>

    <TextView
        android:id="@+id/text_new_aocount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:text="@string/btn_new_account"
        android:textColor="@color/colorAccent2"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>