<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/app_name"
        android:scaleType="centerCrop"
        android:src="@drawable/background_image" />

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_gradiente" />

    <TextView
        android:id="@+id/textWelcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:text="@string/text_welcome"
        android:textColor="@color/colorAccent2"
        android:textSize="38sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextName" />

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/button_tranparent"
        android:hint="@string/text_name"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textColor="@color/colorAccent2"
        android:textColorHint="#ECECEC"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/editTextEmail" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/button_tranparent"
        android:hint="@string/text_email"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textColor="@color/colorAccent2"
        android:textColorHint="#ECECEC"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/editTextPassaword" />

    <EditText
        android:id="@+id/editTextPassaword"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/button_tranparent"
        android:hint="@string/text_passaword"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textColor="@color/colorAccent2"
        android:textColorHint="#ECECEC"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/editTextConfirmPassaword" />

    <EditText
        android:id="@+id/editTextConfirmPassaword"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/button_tranparent"
        android:hint="@string/text_passaword_confirmation"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textColor="@color/colorAccent2"
        android:textColorHint="#ECECEC"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonRegister"
        tools:layout_editor_absoluteX="40dp" />

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/button_gradiente"
        android:text="@string/btn_register"
        android:textAllCaps="false"
        android:textColor="@color/colorAccent2"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonContextn" />

    <Button
        android:id="@+id/buttonContextn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:background="@color/colorTransparent"
        android:gravity="center"
        android:text="@string/btn_existing_account"
        android:textColor="@color/colorAccent2"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>