<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/header_backgroud"
        android:padding="10dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textPage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="5dp"
            android:text="@string/text_menu"
            android:textColor="@color/colorAccent2"
            android:textSize="25sp"
            app:layout_constraintEnd_toStartOf="@+id/imageButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:background="@color/colorTransparent"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_menu_white_24dp"
            app:layout_constraintBottom_toBottomOf="@id/textPage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/textPage"/>
    </androidx.constraintlayout.widget.ConstraintLayout>


    <ScrollView
        android:id="@+id/scrollViewMenu"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/colorBase"
        android:overScrollMode="never"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutHeader"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/layoutLanche"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:background="@drawable/buttoncirclewhite"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="15dp"
                app:layout_constraintDimensionRatio="H,1:1"
                app:layout_constraintEnd_toStartOf="@id/layoutSalgado"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageButton
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_margin="8dp"
                    android:background="@color/colorTransparent"
                    android:contentDescription="@string/app_name"
                    android:padding="8dp"
                    android:src="@drawable/lanche" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/btn_lanche"
                    android:textColor="@android:color/background_dark"
                    android:textSize="17sp"
                    android:textStyle="bold"

                    />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutSalgado"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:background="@drawable/buttoncirclewhite"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="15dp"
                app:layout_constraintDimensionRatio="H,1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/layoutLanche"
                app:layout_constraintTop_toTopOf="parent">

                <ImageButton
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_margin="8dp"
                    android:background="@color/colorTransparent"
                    android:contentDescription="@string/app_name"
                    android:padding="8dp"
                    android:src="@drawable/salgadinhos" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/btn_salgados"
                    android:textColor="@android:color/background_dark"
                    android:textSize="17sp"
                    android:textStyle="bold"

                    />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutBebidas"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:background="@drawable/buttoncirclewhite"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="15dp"
                app:layout_constraintDimensionRatio="H,1:1"
                app:layout_constraintEnd_toStartOf="@id/layoutSalgado"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layoutLanche">

                <ImageButton
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_margin="8dp"
                    android:background="@color/colorTransparent"
                    android:contentDescription="@string/app_name"
                    android:padding="8dp"
                    android:src="@drawable/refrigerante" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/btn_bebidas"
                    android:textColor="@android:color/background_dark"
                    android:textSize="17sp"
                    android:textStyle="bold"

                    />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutDoce"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:background="@drawable/buttoncirclewhite"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="15dp"
                app:layout_constraintDimensionRatio="H,1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/layoutBebidas"
                app:layout_constraintTop_toBottomOf="@id/layoutSalgado">

                <ImageButton
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_margin="8dp"
                    android:background="@color/colorTransparent"
                    android:contentDescription="@string/app_name"
                    android:padding="8dp"
                    android:src="@drawable/sorvete" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/btn_doce"
                    android:textColor="@android:color/background_dark"
                    android:textSize="17sp"
                    android:textStyle="bold"

                    />
            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layoutTrending"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:background="@drawable/trending_background"
                android:padding="20sp"
                app:layout_constraintEnd_toEndOf="@id/layoutDoce"
                app:layout_constraintStart_toStartOf="@+id/layoutBebidas"
                app:layout_constraintTop_toBottomOf="@+id/layoutBebidas">

                <Button
                    android:id="@+id/textTrending"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:background="@drawable/background_white"
                    android:paddingStart="8dp"
                    android:paddingLeft="8dp"
                    android:paddingTop="2dp"
                    android:paddingEnd="8dp"
                    android:paddingRight="8dp"
                    android:paddingBottom="2dp"
                    android:text="@string/btn_save"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageButton
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@color/colorTransparent"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_star_border"
                    android:tint="@color/colorAccent2"
                    app:layout_constraintBottom_toBottomOf="@id/textTrending"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/textTrending" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="22dp"
                    android:ellipsize="end"
                    android:maxLines="3"
                    android:text="@string/text_Text"
                    android:textColor="@color/colorAccent2"
                    android:textSize="15sp"
                    app:layout_constraintTop_toBottomOf="@id/textTrending" />


            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


    <com.google.android.material.bottomnavigation.BottomNavigationView
    android:id="@+id/buttonNavigationView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorAccent2"
    app:itemIconSize="20dp"
    app:labelVisibilityMode="unlabeled"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:menu="@menu/navigation_menu" />

</androidx.constraintlayout.widget.ConstraintLayout>