<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:padding="10dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textPage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="15dp"
            android:text="@string/text_perfil"
            android:textColor="@color/colorAccent2"
            android:textSize="25dp"
            app:layout_constraintEnd_toStartOf="@+id/imageButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:background="@color/colorTransparent"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_menu_white_24dp"
            app:layout_constraintBottom_toBottomOf="@id/textPage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/textPage"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:overScrollMode="never"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutHeader"
        android:background="@color/colorAccent2">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/layoutProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:background="@drawable/background_white"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="15dp"
                app:layout_constraintDimensionRatio="H,1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_marginStart="229dp"
                    android:layout_marginLeft="229dp"
                    android:layout_marginEnd="236dp"
                    android:layout_marginRight="236dp"
                    android:layout_marginBottom="68dp"
                    android:background="@drawable/fotoperfil"
                    app:layout_constraintBottom_toTopOf="@+id/buttonUserProfile"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />
                <EditText
                    android:id="@+id/buttonUserProfile"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginStart="40dp"
                    android:layout_marginEnd="40dp"
                    android:layout_marginBottom="35dp"
                    android:background="@drawable/button_circle_black"
                    android:hint="@string/text_name"
                    android:imeOptions="actionDone"
                    android:importantForAutofill="no"
                    android:inputType="textEmailAddress"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp"
                    android:textColor="@color/colorAccent2"
                    android:textColorHint="#ECECEC"
                    android:textSize="16sp" />
                <EditText
                    android:id="@+id/buttonEmailProfile"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginStart="40dp"
                    android:layout_marginEnd="40dp"
                    android:layout_marginBottom="35dp"
                    android:background="@drawable/button_circle_black"
                    android:hint="@string/text_email"
                    android:imeOptions="actionDone"
                    android:importantForAutofill="no"
                    android:inputType="textEmailAddress"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp"
                    android:textColor="@color/colorAccent2"
                    android:textColorHint="#ECECEC"
                    android:textSize="16sp" />
                <EditText
                    android:id="@+id/buttonPhoneProfile"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginStart="40dp"
                    android:layout_marginEnd="40dp"
                    android:layout_marginBottom="35dp"
                    android:background="@drawable/button_circle_black"
                    android:hint="@string/text_phone"
                    android:imeOptions="actionDone"
                    android:importantForAutofill="no"
                    android:inputType="textEmailAddress"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp"
                    android:textColor="@color/colorAccent2"
                    android:textColorHint="#ECECEC"
                    android:textSize="16sp" />


            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/buttonNavigationView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent2"
        android:backgroundTint="@color/colorAccent2"
        app:itemIconSize="20dp"
        app:labelVisibilityMode="unlabeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/navigation_menu" />


</androidx.constraintlayout.widget.ConstraintLayout>